# routine-health-check

./: .gitignore  README.md
Health Check/: CLAUDE.md  Health Check.txt  aistore_check.py  alert_config.json  alerts.py  auth_click_meripehchaan.py  auth_precheck.py  auth_signin_click.py  (+16 more)
Routine Health Check 2.0/: .gitignore  CLAUDE.md  README.md  pyproject.toml
Routine Health Check 2.0/config/: url_registry.json
Routine Health Check 2.0/docs/: ARCHITECTURE.md  AUTH.md  CRON.md  PITFALLS.md
Routine Health Check 2.0/src/health_check/: __init__.py  __main__.py  cli.py  logging.py  paths.py
Routine Health Check 2.0/src/health_check/auth/: dev_login.py  heuristics.py  prod_login.py  umang_login.py
Routine Health Check 2.0/src/health_check/browser/: context.py
Routine Health Check 2.0/src/health_check/checks/dev/: environment.py
Routine Health Check 2.0/src/health_check/checks/prod/: auth_precheck.py  cms.py  forms.py  govai.py
Routine Health Check 2.0/src/health_check/checks/public/: aistore.py  chatbots.py  docs_portal.py  myscheme.py  rules_engine.py
Routine Health Check 2.0/src/health_check/checks/umang/: integration.py
Routine Health Check 2.0/src/health_check/orchestration/: alerts.py  dashboard.py  liveness_monitor.py  master.py  scheduled_sweep.py
Routine Health Check 2.0/src/health_check/reporting/: models.py
Routine Health Check 2.0/src/health_check/web/: app.py  projects.py  runner.py
Routine Health Check 2.0/src/health_check/web/static/: app.js  style.css
Routine Health Check 2.0/src/health_check/web/templates/: index.html
(+1 files in other folders)
